--- a/ProjetDrive/src/main/webapp/ajax/connexion.html
+++ b/ProjetDrive/src/main/webapp/ajax/connexion.html
@@ -28,7 +28,7 @@ and open the template in the editor.
             </div>
 			<hr/>
 			<div>
-				Identifiant<input type="text" id="identifiant"/>
+				Identifiant==<input type="text" id="identifiant"/>
 			</div>
 			<div>
 				Mot de passe<input type="password" id="mdp"/>
