--- a/ProjetDrive/src/main/webapp/index.html
+++ b/ProjetDrive/src/main/webapp/index.html
@@ -6,5 +6,10 @@
     </head>
     <body>
         <h1>Hello World!</h1>
+        <b>La zone vous presente libelle des produits</b><br/>
+	<textarea id ="tt_zone" rows="4" cols="40">Valeur par d&eacute;faut</textarea><br/>
+	<input id="bt_zone" type="button" value="Afficher le XML" /><br/>
+                
+        <img id="photo" src="" alt="ccc">
     </body>
 </html>
